--- a/.github/workflows/test_eventname.yaml
+++ b/.github/workflows/test_eventname.yaml
@@ -12,3 +12,5 @@ jobs:
           echo "Action: ${{ github.event.action }}"
           echo "Branch: ${{ github.ref }}"
           echo "Merged: ${{ github.event.pull_request.merged }}"
+          echo " Environment: ${{ input.APP_ENV }} or $APP_ENV "
+          echo " github_workflow: ${{ github.workflow }}
