--- a/.github/workflows/test_eventname.yaml
+++ b/.github/workflows/test_eventname.yaml
@@ -1,6 +1,64 @@
 name: CI/CD Pipeline
 
 on: workflow_call
+inputs:
+      APP_TIER:
+        description: "Application Tier"
+        required: false
+        type: string
+        default: "BE"
+      APP_ENV:
+        description: "Application Environment"
+        required: true
+        type: string
+      AWS_REGION:
+        description: "AWS Region"
+        required: true
+        type: string
+      APPROVAL_EMAIL:
+        description: "Approval Email Address"
+        required: false
+        default: "false"
+        type: string
+      ZOOM_EMAIL:
+        description: "Zoom Email for Notifications"
+        required: false
+        type: string
+        default: VitaProtects-DevOps-8596161d3fb640819fe47403a0bab51d@teamchat.zoom.us
+      ECR_REGISTRY:
+        description: "ECR Registry"
+        required: true
+        type: string
+      ECR_REPOSITORY:
+        description: "ECR Repository"
+        required: true
+        type: string
+      ECS_CLUSTER:
+        description: "ECS Cluster"
+        required: true
+        type: string
+      ECS_SERVICE:
+        description: "ECS Service"
+        required: true
+        type: string
+      TASK_DEFINITION:
+        description: "Task Definition"
+        required: true
+        type: string
+      CONTAINER_NAME:
+        description: "Container Name"
+        required: true
+        type: string
+      NOTIFY:
+        description: "Boolean to specify if notification is required or not"
+        required: false
+        type: string
+        default: "true"
+      DB_NAME:
+        description: "Database URL to take snapshot from"
+        required: false
+        type: string
+        default: "false"
 
 jobs:
   detect-event:
