--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ununtu-latest
     concurrency:
       group: deploy-${{ github.ref }}
-      cancel-in-progress: true
+      cancel-in-progress: false
 
     steps:
       - name: ahmed
