--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,6 +4,8 @@ on:
 
 jobs:
   test:
+    outputs:
+      KEY: ${{ steps.test.outputs.KEY }}  
     runs-on: ubuntu-latest
     steps:
       - name: test-code
@@ -11,4 +13,11 @@ jobs:
         run: echo "KEY=apex" >> $GITHUB_ENV
 
       - name: show-env
-        run: echo "the value is  ${{ env.KEY }} or can be written as ${{ steps.test.outputs.KEY }}" 
+        run: echo "the value is  ${{ env.KEY }} or can be written as ${{ needs.test.outputs.KEY }}" 
+
+  test2:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: show-env-2
+        run: echo "the value from previous job is  ${{ needs.test.outputs.KEY }} or can be written as ${{ env.KEY }}"
